munch-match/src/components/SlotMachine/SlotMachine.module.css
.spinner-container {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 55vh;
}

.reels {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 100px;
  margin-top: 15px;
  flex-wrap: nowrap;
  overflow: none;
  height: 40vh;
}

.icons {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 150px;
  height: 150px;
}

.spin-button {
  background: rgb(255, 91, 113) !important;
  color: white;
  font-size: 30px;
  padding: 15px 30px;
  border: none;
  border-radius: 50px;  
  margin-bottom: 1rem;
  font-weight: bold;  
  box-shadow: 0px 8px 15px rgba(0,0,0,0.1);
  transition: all 0.3s ease 0s;
  cursor: pointer;
}

.spin-button:hover {
  background: linear-gradient(90deg, rgba(0,204,255,1) 0%, rgba(255,0,150,1) 100%);
  box-shadow: 0px 15px 20px rgba(0,0,0,0.3);
  transform: translateY(-7px);
}

.spin-button:disabled {
  background: grey;
  box-shadow: none;
  cursor: not-allowed;
}

.searchButton {
  /* background: rgb(149, 235, 84) !important; */
  color: rgb(0, 0, 0);
  font-size: 30px;
  padding: 15px 30px;
  border: none;
  border-radius: 50px;
  margin-bottom: 2.5rem; 
  font-weight: bold;
  transition: background 0.6s, transform 0.5s;
}

